fix the gap in the footer menu to avoid overflow on small screen

--- a/src/styles/components/footer2.scss
+++ b/src/styles/components/footer2.scss
@@ -18,7 +18,7 @@
   nav {
     ul {
       display: flex;
-      gap: 4rem;
+      gap: clamp(1rem, 2vw, 2rem);
     }
   }
 }
@@ -37,9 +37,9 @@
   font-weight: 200;
   font-size: 0.8rem;
   line-height: 1.5rem;
+  text-align: center;
 
   @media screen and (min-width: 48rem) {
-    text-align: center;
   }
 }
 
